# icaif2025

./: README.md  pyproject.toml  requirements.txt
configs/: figraph.yaml  figraph_splits.yaml  usfsd.yaml  usfsd_splits.yaml
configs/c2n/: gce.yaml
configs/encoders/: helmert.yaml  label.yaml
configs/models/: dcnv2.yaml  fttransformer.yaml  mlp.yaml  tabnet.yaml
src/fraud/: datasets.py  metrics.py  run_experiments.py
src/fraud/encoders/: _special_base.py  base.py  baseline_encoders.py  cure_wrapper.py  dhe_wrapper.py  distance_wrapper.py  gce_wrapper.py  utils.py
src/fraud/models/: mlp.py  xgb.py
src/fraud/plots/: make_figures.py  make_tables.py
src/fraud/tools/: make_toy_data.py
src/fraud_c2n/: cli.py
src/fraud_c2n/c2n/: common.py
src/fraud_c2n/c2n/cure/: cure_embed.py
src/fraud_c2n/c2n/dhe/: dhe_embed.py
src/fraud_c2n/c2n/distance/: mds_embed.py
src/fraud_c2n/c2n/gce/: gcn_ae.py
src/fraud_c2n/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
src/fraud_c2n/catboost_info/learn/: events.out.tfevents
src/fraud_c2n/catboost_info/test/: events.out.tfevents
src/fraud_c2n/configs/c2n/: cure.yaml  dhe.yaml  distance.yaml
src/fraud_c2n/data/: load.py  preprocess.py  split.py
src/fraud_c2n/encoders/: base.py  encoders.py
src/fraud_c2n/models/: dcn.py  deepcrossing.py  fttransformer.py  mlp.py  xgboost_model.py
src/fraud_c2n/runners/: fit_predict.py  pipelines.py
src/fraud_c2n/utils/: io.py  metrics.py  seed.py
src/fraud_c2n_runner.egg-info/: PKG-INFO
src/fraud_runner.egg-info/: SOURCES.txt
(+112 files in other folders)
